# fcitx5-pangu

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
archbuild/: PKGBUILD
po/: CMakeLists.txt  LINGUAS  fcitx5-pangu.pot  ja.po  ko.po  ru.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  pangu.conf.in  pangu.conf.in.in  pangu.cpp  pangu.h
