add_library(pangu MODULE pangu.cpp)
target_link_libraries(pangu Fcitx5::Core Fcitx5::Config Fcitx5::Module::Notifications)
set_target_properties(pangu PROPERTIES PREFIX "")
install(TARGETS pangu DESTINATION "${FCITX_INSTALL_LIBDIR}/fcitx5")
fcitx5_translate_desktop_file(pangu.conf.in pangu.conf)
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/pangu.conf" DESTINATION "${FCITX_INSTALL_PKGDATADIR}/addon" COMPONENT config)
